--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_URL=https://i-life.herokuapp.com/
+ASSET_URL=https://i-life.herokuapp.com/public
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=q2gen47hi68k1yrb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=e2p9n8a2nzyj4kir
+DB_USERNAME=u38bpecoqn4np2pm
+DB_PASSWORD=kfwaz3821s2jw1sx
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
