--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pjF0dQlMZlw1+gHInutFxfiwf0ro6RQtN9J/gfHa44g=
 APP_DEBUG=true
 APP_URL=https://i-life.herokuapp.com/
 ASSET_URL=https://i-life.herokuapp.com/public
