--- a/.env
+++ b/.env
@@ -23,6 +23,22 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+LINKEDIN_REDIRECT_URI=https://i-life.herokuapp.com/linkedin/callback
+LINKEDIN_SECRET=79b76d71bf1f5a66626f90b093458e08
+LINKEDIN_KEY=578296659368820
+
+TWITTER_REDIRECT_URI=https://i-life.herokuapp.com/twitter/callback
+TWITTER_SECRET=79b76d71bf1f5a66626f90b093458e08
+TWITTER_KEY=578296659368820
+
+FACEBOOK_REDIRECT=https://i-life.herokuapp.com/facebook/callback
+FACEBOOK_APP_SECRET=79b76d71bf1f5a66626f90b093458e08
+FACEBOOK_APP_ID=578296659368820
+
+GOOGLE_REDIRECT=https://i-life.herokuapp.com/google/callback
+GOOGLE_CLIENT_SECRET=Okr1A7Onp_LWAYspj594-qf_
+GOOGLE_CLIENT_ID=699674127728-imtpfkqitlbeemrai06tu172mh78qa58.apps.googleusercontent.com
+
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
