--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:pjF0dQlMZlw1+gHInutFxfiwf0ro6RQtN9J/gfHa44g=
 APP_DEBUG=true
 APP_URL=https://i-life.herokuapp.com/
-ASSET_URL=https://i-life.herokuapp.com/public
+ASSET_URL=https://i-life.herokuapp.com/public/
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
